# aoc2023

day1/: main.hs
day10/: day10.cabal
day10/app/: Main.hs
day2/: main.hs
day3/: main.hs
day4/: main.hs
day5/: main.hs
day6/: main.hs
day7/: main.hs
day8/: day8.cabal  main.hs
day8/app/: Main.hs
day9/: day9.cabal
day9/app/: Main.hs
