cabal-version:      3.0
name:               day8

version:            0.1.0.0


author:             Daniel Stroh

build-type:         Simple

common warnings
    ghc-options: -Wall

executable day8
    import:           warnings

    main-is:          Main.hs

    build-depends:    base ^>=4.15.1.0,
                    parsec  >=3.1.14.0,
              data-ordlist  >=0.4.7.0

    hs-source-dirs:   app

    default-language: Haskell2010
